# dumux

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pylintrc  AUTHORS.md  CHANGELOG  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  COPYING  CTestConfig.cmake  INSTALL  INSTALL.cmake  LICENSE.md  Makefile.am  README  README.md  REUSE.toml  autogen.sh  autotools-debug.opts  autotools-optim.opts  c_cpp_properties.json  cmake.opts  codemeta.json  config.h.cmake  configure.ac  debug.opts  docker.opts  dumux-config.cmake.in  dumux-version.cmake.in  dumux.pc.in  dune-mux.pc  dune-mux.pc.in  dune.module  eclipse_profile.xml  (+8 more)
Stupid/: CMakeLists.txt  INSTALL  TODO  config.h.cmake
Stupid/Problems/: CMakeLists.txt
Stupid/Tests/: CMakeLists.txt
Stupid/grids/: unitcube1.dgf
Stupid/scripts/: compareRuns.sh  lenhard1.conf  lenhard2.conf  lens.conf  plotCapPressures.sh  plotLenhardExp1.sh  plotLenhardExp2.sh  plottest.sh  runonteleloch.sh  runsim.sh  sanitizeWhitespace.py  snipsnap.py
appl/2p2c/: Makefile.am  nima2p2c.cc  nima2p2c_diffusion.cc  nimasdiffusionproblem.hh  nimasproblem.hh  nimasproblemORIG.hh  nimassoil.hh
appl/co2/: CMakeLists.txt  Makefile.am  co2.cc  co2_soilproperties.hh  co2problem.hh  co2problem11.hh
appl/dynamic_pc/: Makefile.am  dynamic_pc.cc  dynamic_pc_problem.hh
appl/hysteresis/: CMakeLists.txt  lenharddomain.hh  lenhardexp2main.cc  lenhardmain.cc  lenhardproblem.hh  lenhardstate.hh  lensconfig.hh  lensdomain.hh  lensnewtoncontroller.hh  lensproblem.hh  lensstate.hh
appl/phasepressure_ff/: Makefile.am  injection_ff.cc  injection_problem.hh  injection_soil.hh
appl/shallowwater/: 2dbump.cc  2dbump_problem.hh  2dpulse.cc  2dpulse_problem.hh  Makefile.am  solidsurface_irregular.hh
cmake/modules/: AddGstatFileLinks.cmake  AddInputFileLinks.cmake  AddKokkosFlags.cmake  AddOpenMPFlags.cmake  CMakeLists.txt  CheckAlwaysInline.cmake  CheckConstexpr.cmake  CheckPatchedPDELab.cmake  CopyOfDuneSymlinkOrCopy.cmake  DumuxAddLibrary.cmake  DumuxDoxygen.cmake  DumuxHDF5.cmake  DumuxMacros.cmake  DumuxMultithreadingBackend.cmake  DumuxMumpsTargetFixup.cmake  DumuxTestMacros.cmake  FindGLPK.cmake  FindGmsh.cmake  FindGstat.cmake  FindILUPack.cmake  FindJsonCpp.cmake  FindNLOPT.cmake  FindPVPython.cmake  FindQuadmath.cmake  FindValgrind.cmake
doc/: CMakeLists.txt  Makefile.am  propparams.csv  propparams.ods  styleguide.md
doc/docextra/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxydep  Doxyfile  DoxygenDumuxLayout.xml  Doxylocal  Makefile.am  README.md  bestpractice.wml  custom.css  customdoxygendumux.css  doxy-footer.html  doxy-header.wml  doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-interactive-toc.js  doxygen-awesome-paragraph-link.js  doxygen-awesome-sidebar-only-darkmode-toggle.css  doxygen-awesome-sidebar-only.css  doxygen-awesome.css  dumux-custom.css  dumux-custom.js  dumux-scene.js  dumux.bib  footer.html  fvgeometry.md  getting-started.md  header.html  highlevel.md  installation.md  main.md  mainpage  mainpage.md  mainpage.txt  markdown-filter.py  markdown-math-filter.pl  markdown-readme-header-filter.py  modules  modules.md  modules.txt  modules_2.md  (+3 more)
doc/handbook/: .gitignore  0_discussion.tex  0_dumux-handbook.tex  0_listingstyle.tex  1_introduction.tex  2_detailedinstall.tex  2_gettingstarted.tex  2_quickinstall.tex  2_quickstartguide.tex  3_course.tex  3_detailedinstall.tex  3_furtherpractice.tex  3_tutorial.tex  3_tutorialcoupled.tex  3_tutorialdecoupled.tex  3_tutorialimplicit.tex  3_tutorialsequential.tex  4_assemblinglinearsystem.tex  4_course.tex  4_developingdumux.tex  4_dumuxoverview.tex  4_examples.tex  4_externaltools.tex  4_furtherpractice.tex  4_grids.tex  4_guidelines.tex  4_newfoldersetup.tex  4_newtoninanutshell.tex  4_parameterfiles.tex  4_restartsimulations.tex  4_structure.tex  4_tipsandtricks.tex  5_assemblinglinearsystem.tex  5_developingdumux.tex  5_externaltools.tex  5_flowofthings.tex  5_fluidframework.tex  5_grids.tex  5_inputoutput.tex  5_models.tex  (+44 more)
doc/logo/: dumux_logo_hires_whitebg.eps  logo.eps  logo.mp  logo.mp~  logo_bw.eps
doc/naminglist/: file_list.xls  naminglist.xls
dumux/: CMakeLists.txt  Makefile.am  exceptions.hh
dumux/1p2c/: 1p2cproblem.hh  Makefile.am  onephasemodel.hh
dumux/2p2c/: 2p2cmodel.hh  2p2cnewtoncontroller.hh  2p2cproblem.hh  Makefile.am  boxjacobian.hh  boxjacobian_2p2c.hh  localjacobian_2p2c.hh
dumux/2p2cni/: 2p2cnimodel.hh  2p2cninewtoncontroller.hh  2p2cniproblem.hh  Makefile.am  minc2p2cnimodel.hh  minc2p2cniproblem.hh
dumux/2penergy/: 2penergymodel.hh  2penergyproblem.hh  Makefile.am
dumux/2pni/: 2pnimodel.hh  2pninewtoncontroller.hh  2pniproblem.hh  Makefile.am
dumux/adaptive/: CMakeLists.txt  adapt.hh  griddatatransfer.hh  (+2 more)
examples/: CMakeLists.txt  README.md  convert_code_to_doc.py  generate_example_docs.py
m4/: Makefile.am  _ac_latex_test.m4  ac_latex_classes.m4  ac_prog_dvipdf.m4  ac_prog_pdflatex.m4  cxx0x_constexpr.m4  dumux.m4  dumux_always_inline.m4  dumux_deprecated.m4  dumux_deprecated_autotools.m4  dumux_quad.m4  dumux_unused.m4  dune-mux.m4  patched_pdelab.m4
python/: CMakeLists.txt  README.md  propertiesgenerator.py  setup-python-env.sh  setup.py.in  test.py
test/: CMakeLists.txt  Makefile.am  cmake_test.opts
tutorial/: #tutorialproblem_implicit.hh#  CMakeLists.txt  Makefile.am  README.md  ex2_tutorialproblem_implicit.hh  ex2_tutorialspatialparams_implicit.hh  tutorial_coupled.cc  tutorial_coupled.input  tutorial_decoupled.cc  tutorial_decoupled.input  tutorial_implicit.cc  tutorial_implicit.input  tutorial_sequential.cc  tutorial_sequential.input  tutorial_soilproperties_decoupled.hh  tutorialproblem_coupled.hh  tutorialproblem_decoupled.hh  tutorialproblem_implicit.hh  tutorialproblem_sequential.hh  tutorialsoil_coupled.hh  tutorialspatialparameters_coupled.hh  tutorialspatialparameters_decoupled.hh  tutorialspatialparams_coupled.hh  tutorialspatialparams_decoupled.hh  tutorialspatialparams_implicit.hh  tutorialspatialparams_sequential.hh
(+12649 files in other folders)
