add_subdirectory("adaptive")
add_subdirectory("assembly")
add_subdirectory("common")
add_subdirectory("discretization")
add_subdirectory("freeflow")
add_subdirectory("io")
add_subdirectory("linear")
add_subdirectory("material")
add_subdirectory("multidomain")
add_subdirectory("nonlinear")
add_subdirectory("parallel")
add_subdirectory("porousmediumflow")
