add_subdirectory(1protationsymmetry)
add_subdirectory(1ptracer)
add_subdirectory(2pinfiltration)
add_subdirectory(__pycache__)
add_subdirectory(biomineralization)
add_subdirectory(freeflowchannel)
add_subdirectory(liddrivencavity)
add_subdirectory(porenetwork_upscaling)
add_subdirectory(shallowwaterfriction)
