# SPDX-FileCopyrightInfo: Copyright © DuMux Project contributors, see AUTHORS.md in root folder
# SPDX-License-Identifier: GPL-3.0-or-later

add_subdirectory(2pinfiltration)
add_subdirectory(1ptracer)
add_subdirectory(biomineralization)
add_subdirectory(cahn_hilliard)
add_subdirectory(diffusion)
add_subdirectory(embedded_network_1d3d)
add_subdirectory(shallowwaterfriction)
add_subdirectory(freeflowchannel)
add_subdirectory(1protationsymmetry)
add_subdirectory(liddrivencavity)
add_subdirectory(porenetwork_upscaling)
