M4FILES = \
	ac_latex_classes.m4  \
	ac_latex_class.m4 \
	_ac_latex_test.m4 \
	ac_latex_package.m4 \
	ac_prog_bibtex.m4 \
	ac_prog_dvipdf.m4 \
	ac_prog_latex.m4 \
	cxx0x_constexpr.m4 \
	dumux.m4 \
	dumux_always_inline.m4 \
	dumux_deprecated.m4 \
	dumux_unused.m4 \
	dumux_quad.m4

aclocaldir = $(datadir)/aclocal
aclocal_DATA = $(M4FILES)

EXTRA_DIST = $(M4FILES)

include $(top_srcdir)/am/global-rules
